Fixed Song Recommendation not showing album art
Fixed Song Recommendation not showing album art, and add switching state for different song recommendation between Spotify and Non Spotify User

--- a/frontend/src/song_recommendation/SongRecommendation.css
+++ b/frontend/src/song_recommendation/SongRecommendation.css
@@ -57,6 +57,12 @@
   cursor: pointer;
 }
 
+.heart-btn img {
+  width: 100px;
+  height: 100px;
+}
+
+
 /* Swipe Indicator (appears during swipe) */
 .swipe-indicator {
   position: absolute;
@@ -115,6 +121,7 @@
   }
 
   .controls button {
-    font-size: 20px;
+    font-size: 40px;
   }
+  
 }
